feat: using mapper for getting collection vouchers
Signed-off-by: Rajdeep Roy Chowdhury <rrajdeeproychowdhury@gmail.com>